mongo/second/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
              name: mongodb
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc-data
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-database
spec:
  selector:
    app: mongodb
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
